Fixed Z-index

--- a/packages/commonwealth/client/scripts/views/components/component_kit/new_designs/CWModal/CWModal.scss
+++ b/packages/commonwealth/client/scripts/views/components/component_kit/new_designs/CWModal/CWModal.scss
@@ -2,7 +2,7 @@
 
 .MuiModal-root {
   position: fixed;
-  z-index: 80;
+  z-index: 80000;
   right: 0;
   bottom: 0;
   top: 0;
